Fixed bug in previous commit affecting position of submenus in collapsed mode.

--- a/src/components/_navbar.scss
+++ b/src/components/_navbar.scss
@@ -55,7 +55,7 @@
         }
 
         &.collapse {
-          position: absolute;
+          position: relative;
           left: $font-size-base * 5.0;
           top: $font-size-base * -5.0;
           width: $navbar-width - ($font-size-base * 2.5);
